fix: prevent page breaks inside boxes (#85)

--- a/quarkdown-html/src/main/resources/render/theme/global.css
+++ b/quarkdown-html/src/main/resources/render/theme/global.css
@@ -717,6 +717,7 @@ Example: "Figure 1.1:"
         color-mix(in srgb, var(--box-background-color) 98%, rgba(0, 0, 0, .1))
     );
     background-color: var(--box-background-color);
+    break-inside: avoid;
 }
 
 .box > .box-content {
